--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -98,22 +98,22 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="assets/school.jpg"></br></br>
+          <a href="<%= schools_path %>"><img class="img-circle" src="assets/school.jpg"></a></br></br>
           <h2>Schools</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="<%= schools_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="assets/hospital.jpg">
+          <a href="<%= hospitals_path %>"><img class="img-circle" src="assets/hospital.jpg"></a>
           <h2>Hospitals</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="<%= hospitals_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="assets/melukote.jpg">
+          <a href="<%= tourist_places_path %>"><img class="img-circle" src="assets/melukote.jpg"></a>
           <h2>Tourist Places</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="<%= tourist_places_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
