--- a/app/views/tourist_places/new.html.erb
+++ b/app/views/tourist_places/new.html.erb
@@ -1,11 +1,11 @@
 <div class="navbar-wrapper">
 	<div class="container" style="background:#eee; height: 500px">
 		<div class="jumbotron">
-			<h2>Edit Village</h2>
+			<h2>Create New Place</h2>
 			<%= render :partial => "form"%>
 		</div>
 		<div class="back_btn_position">
-			<a class="btn btn-primary" href="/villages" type="cancel">
+			<a class="btn btn-primary" href="/tourist_places" type="cancel">
 				Back
 			</a>
 		</div>
