--- a/app/views/villages/new.html.erb
+++ b/app/views/villages/new.html.erb
@@ -1,8 +1,13 @@
 <div class="navbar-wrapper">
-	<div class="container">
+	<div class="container" style="background:#eee; height: 500px">
 		<div class="jumbotron">
 			<h2>Create New Village</h2>
 			<%= render :partial => "form"%>
+		</div>
+		<div class="back_btn_position">
+			<a class="btn btn-primary" href="/villages" type="cancel">
+				Back
+			</a>
 		</div>
 	</div>
 </div>
