integrated google map in to app

--- a/app/views/tourist_places/index.html.erb
+++ b/app/views/tourist_places/index.html.erb
@@ -31,4 +31,6 @@
 	<a class="btn btn-primary" href="/" type="cancel">
 		Back
 	</a>
+	<a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
+    </a>
 </div>
