--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -32,4 +32,6 @@
 	<a class="btn btn-primary" href="/" type="cancel">
 		Back
 	</a>
+	<a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
+    </a>
 </div>
