--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -36,6 +36,8 @@
 <a class="btn btn-primary" href="/" type="cancel">
     Back
 </a>
+<a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
+    </a>
 </div>
 </div>
 </div>
