--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -14,12 +14,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Namma Pandavapura</a>
+              <a class="navbar-brand" href="/">Namma Pandavapura</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="<%= about_us_path %>">About</a></li>
                 <li><a href="<%= contact_path %>">Contact</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
