--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,7 +4,7 @@
 
 .new_villade_position {
 	float: right;
-	/*padding-right: 40px;*/
+	/*margin-left: 40px;*/
 }
 
 .creat_village_btn {
@@ -40,4 +40,46 @@
 
 .create_btn_position_fix {
 	padding-right: 15px;
+}
+
+.search_field_position {
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    color: #555;
+    display: block;
+    font-size: 14px;
+    height: 34px;
+    line-height: 1.42857;
+    padding: 6px 12px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    /*width: 30%;*/
+}
+
+.search_btn_position {
+	margin-left: 300px;
+	padding-top: -150px;
+}
+
+.search_field {
+	padding-right: 50px;
+	margin-right: 260px;
+}
+
+.input-group-addon {
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1;
+    color: #555555;
+    text-align: center;
+    background-color: #eeeeee;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+}
+
+.padding_fix {
+	margin-right: 50px;
 }
