--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -6,38 +6,54 @@
 					Create New Village
 				</a>
 			</div>
+            <%= form_tag villages_path, :method => 'get' do %>
+            <div class="search_field">
+            <div class="row">
+            <div class="col-sm-4">
+                <%= text_field_tag :search, params[:search], :class => " search_field_position" %>
+                </div>
+                <%#= submit_tag " Search", :name => nil, :class => 'search_btn_position'%>
+                <div class="col-sm-2">
+                <button class="btn btn-primary" type="submit">
+                    <span class=""></span>&nbsp;&nbsp;
+                    Search
+                </button>
+                </div>
+            </div>
+            </div>
+            <% end %></br></br>
             <table class="table table-striped table-hover">
-               <thead>
-                  <tr>
-                     <th class="coupon-width">List of Villages</th>
-                     <th class="coupon-width">Area in Hectares</th>
-                     <th class="Last-access">Action</th>
-                 </tr>
-             </thead>
-             <tbody>
-              <% @village.each do |vlg| %> 
+             <thead>
               <tr>
-                 <td>
-                    <div><%= vlg.village_name %></div>
-                </td>
-                <td>
-                    <div><%= vlg.area %></div>
-                </td>
-                <td>
-                    <%= link_to image_tag("icon-edit.png"), edit_village_path(vlg.id), :title => "Edit", 'data-no-turbolink' => true %>
-                    <%= link_to image_tag("icon-deleted.png"), village_path(vlg.id), method: :delete, data: {confirm: 'Are u sure'}, :title => "Delete"  %>
-                </a>
-            </td>
-        </tr>
-        <% end %>
-    </tbody>
+               <th class="coupon-width">List of Villages</th>
+               <th class="coupon-width">Area in Hectares</th>
+               <th class="Last-access">Action</th>
+           </tr>
+       </thead>
+       <tbody>
+          <% @village.each do |vlg| %> 
+          <tr>
+           <td>
+            <div><%= vlg.village_name %></div>
+        </td>
+        <td>
+            <div><%= vlg.area %></div>
+        </td>
+        <td>
+            <%= link_to image_tag("icon-edit.png"), edit_village_path(vlg.id), :title => "Edit", 'data-no-turbolink' => true %>
+            <%= link_to image_tag("icon-deleted.png"), village_path(vlg.id), method: :delete, data: {confirm: 'Are u sure'}, :title => "Delete"  %>
+        </a>
+    </td>
+</tr>
+<% end %>
+</tbody>
 </table>
 <!-- <%#= paginate @village %><br> -->
 <a class="btn btn-primary" href="/" type="cancel">
     Back
 </a>
 <a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
-    </a>
+</a>
 </div>
 </div>
 </div>
