Added pagination in village page

--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -48,7 +48,7 @@
 <% end %>
 </tbody>
 </table>
-<!-- <%#= paginate @village %><br> -->
+<%= paginate @village %><br>
 <a class="btn btn-primary" href="/" type="cancel">
     Back
 </a>
