update the content and cosmetic changes

--- a/app/views/home/galary_page.html.erb
+++ b/app/views/home/galary_page.html.erb
@@ -1,5 +1,12 @@
 <div class="navbar-wrapper">
 	<div class="container">
+	<h1>Namma Pandavapura</h1>
+    <div class="header-border border_position"></div>
+    <div class="new_villade_position">
+    	<a class="btn btn-primary" href="/" type="cancel">
+    		Home
+    	</a>
+    </div>
 		<h2>Images on Pandavapura</h2></br>
 		<img src="assets/images_1.jpg" alt="First slide">&nbsp;
 		<img src="assets/me.jpg" alt="First slide">
