--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -57,7 +57,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Love.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <p></p>
               <p><a class="btn btn-lg btn-primary" href="<%= map_path %>" role="button">Map</a></p>
             </div>
           </div>
@@ -67,7 +67,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Peace.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p></p>
               <p><a class="btn btn-lg btn-primary" href="<%= villages_path %>" role="button">List of Villages</a></p>
             </div>
           </div>
@@ -77,7 +77,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Joy.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p></p>
               <p><a class="btn btn-lg btn-primary" href="/galary" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -100,19 +100,19 @@
         <div class="col-lg-4">
           <a href="<%= schools_path %>"><img class="img-circle" src="assets/school.jpg"></a></br></br>
           <h2>Schools</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p>A school is an institution designed for the teaching of students (or "pupils") under the direction of teachers. We have lot of good schools in this city and also the provided formal and excelent education to chilldrens. If you want to known list of schools click below button.</p>
           <p><a class="btn btn-default" href="<%= schools_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="<%= hospitals_path %>"><img class="img-circle" src="assets/hospital.jpg"></a>
           <h2>Hospitals</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p>A hospital is a health care institution providing patient treatment with specialised staff and equipment. In Pandavapura we can see good and well facilitate hospitals. And also we can see many nursing homes. If you want to see list of hospitals click below button.</p>
           <p><a class="btn btn-default" href="<%= hospitals_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="<%= tourist_places_path %>"><img class="img-circle" src="assets/melukote.jpg"></a>
           <h2>Tourist Places</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>Pandavapura is a narmal city, it is not a tourist place but many touriest places are there near to city. Melukote, KRS, Kerethonnur and Kunthi betta are some of the places. Please click below button to see list of touriest places. </p>
           <p><a class="btn btn-default" href="<%= tourist_places_path %>" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -125,7 +125,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Governament Bus Stand. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">Bus service is provided by KSRTC runs buses that connect Pandavapura to other places in Karnataka and a few buses to other states. It was started service on 2006 inagurated by Chaluvarayaswamy former transport minster Karnataka governament.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="assets/bus.jpg" alt="Generic placeholder image">
@@ -140,7 +140,7 @@
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Center Market. <span class="text-muted">You will get everything.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">It is there in the heart of the city and most of the shops are located in this place. Every Thursday, a farmer's market (called as "Santhe" in Kannada) is held in the heart of the town, where farmers directly sell their agricultural products</p>
         </div>
       </div>
 
@@ -149,7 +149,8 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Governament Offices. <span class="text-muted">Go and get your document.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">Most of the taluk Governament offices are there in Pandavapura city but some of are there in related hobali head quatres.
+          "mini vidanashowda" is the center of attraction in this city. </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="assets/office.jpg" alt="Generic placeholder image">
@@ -159,6 +160,13 @@
       <hr class="featurette-divider">
 
       <!-- /END THE FEATURETTES -->
+
+      <div class="row contact-margin">
+    <h2><u>Find Yourself In Pandavapura</u></h2></br>
+    <figure class="page6-img1 img-bot">
+                    <iframe src="https://www.google.com/maps/embed/v1/place?q=11867+Padavapura,+Mandya,+Karnataka+571434,+India&key=AIzaSyCjd98SBT0PO8q7tP-lfYwzForr2YMFi9Y" width="1170" height="570" frameborder="0" style="border:1px solid"></iframe>
+                </figure>
+</div>
 
 
       <!-- FOOTER -->
