--- a/app/views/home_page/about_us.html.erb
+++ b/app/views/home_page/about_us.html.erb
@@ -1,5 +1,12 @@
 <div class="navbar-wrapper">
-	<div class="container" style="background:#eee; height: 500px">
+	<div class="container" style="background:#eee; height: 700px">
+	<h1>Namma Pandavapura</h1>
+    <div class="header-border border_position"></div>
+    <div class="new_villade_position">
+    	<a class="btn btn-primary" href="/" type="cancel">
+    		Home
+    	</a>
+    </div>
 	<h2>About Pandavapura</h2></br>
 	<h4><u>History</u></h4>
 	<p>The name 'Pandavapura' means "Town of Pandavas". Mythology states that the Pandavas during their period of exile stayed here for sometime, and Kunti, mother of the Pandavas, liked the hillock so much that it became one of her favorite haunts. The town is also named after the Pandavas because of their brief stay in this region. The name "French Rock" dates back to India's Pre-Independence days, the place was used as the camping ground by the French army, which came to help Tippu Sultan in his war against the British. It is believed that French named the small town as "French Rocks", as the town is in the vicinity of two rocky hills. After Indian Independence these rocky hills called as "Kunti Betta" by locals.</br>
