--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -1,4 +1,6 @@
 <div class="container" style="background:#eee; height: 1000px">
+<h1>Namma Pandavapura</h1>
+    <div class="header-border border_position"></div>
 	<div class="creat_school_btn">
 		<a class="btn btn-primary" href="/hospitals/new" type="submit">
 			Create New Hospital
