--- a/app/views/map/new.html.erb
+++ b/app/views/map/new.html.erb
@@ -1,8 +1,15 @@
 <div class="container container-min-height" id="content">
+<h1>Namma Pandavapura</h1>
+    <div class="header-border border_position"></div>
+    <div class="new_villade_position">
+    	<a class="btn btn-primary" href="/" type="cancel">
+    		Home
+    	</a>
+    </div>
   <div class="row contact-margin">
     <h2><u>Find Yourself In Pandavapura</u></h2></br>
     <figure class="page6-img1 img-bot">
-                    <iframe src="https://www.google.com/maps/embed/v1/place?q=11867+Padavapura,+Mandya,+Karnataka+571434,+India&key=AIzaSyCjd98SBT0PO8q7tP-lfYwzForr2YMFi9Y" width="1170" height="570" frameborder="0" style="border:1px solid"></iframe>
+                    <iframe src="https://www.google.com/maps/embed/v1/place?q=11867+Padavapura,+Mandya,+Karnataka+571434,+India&key=AIzaSyCjd98SBT0PO8q7tP-lfYwzForr2YMFi9Y" width="1170" height="470" frameborder="0" style="border:1px solid"></iframe>
                 </figure>
 </div>
 </div>
