--- a/app/views/tourist_places/edit.html.erb
+++ b/app/views/tourist_places/edit.html.erb
@@ -1,6 +1,8 @@
 <div class="navbar-wrapper">
-	<div class="container" style="background:#eee; height: 500px">
+	<div class="container" style="background:#eee; height: 600px">
 		<div class="jumbotron">
+		<h1>Namma Pandavapura</h1>
+    <div class="header-border border_position"></div>
 			<h2>Edit Place</h2>
 			<%= render :partial => "form"%>
 		</div>
