--- a/app/views/tourist_places/index.html.erb
+++ b/app/views/tourist_places/index.html.erb
@@ -1,11 +1,13 @@
 <div class="container" style="background:#eee; height: 1000px">
+<h1>Namma Pandavapura</h1>
+    <div class="header-border border_position"></div>
 	<div class="creat_school_btn">
 		<a class="btn btn-primary" href="/tourist_places/new" type="submit">
 			Create New School
 		</a>
 	</div>
-	<h2>List of Place</h2>
-	<div class="header-border"></div>
+	<h2><u>List of Place</u></h2>
+	<!-- <div class="header-border"></div> -->
 	<% @place.each do |plc|%>
 	<div>
 		<div>
