--- a/app/views/home_page/contact.html.erb
+++ b/app/views/home_page/contact.html.erb
@@ -1,4 +1,11 @@
 <div class="container container-min-height" id="content">
+<h1>Namma Pandavapura</h1>
+    <div class="header-border border_position"></div>
+    <div class="new_villade_position">
+      <a class="btn btn-primary" href="/" type="cancel">
+        Home
+      </a>
+    </div>
   <div class="row contact-margin">
     <div class="col-lg-4 col-sm-3 col-md-3">
           <h4><strong>Find Us</strong></h4></br>
