--- a/app/views/villages/_form.html.erb
+++ b/app/views/villages/_form.html.erb
@@ -16,7 +16,14 @@
 		<%= f.text_field :area, :class => "form-control",
 		:placeholder => "Area"%>
 	</div>
+</div></br></br>
+<div class="form-group">
+	<div class="col-sm-12">
+		<%= f.text_field :village_code, :class => "form-control",
+		:placeholder => "Village Code"%>
+	</div>
 </div>
+
 <div class="creat_village_btn create_btn_position_fix">
 	<button class="btn btn-primary" type="submit">
 		<span class=""></span>&nbsp;&nbsp;
