created event model

--- a/app/views/home_page/contact.html.erb
+++ b/app/views/home_page/contact.html.erb
@@ -1,4 +1,4 @@
-<div class="container container-min-height" id="content">
+<div class="container container-min-height" id="content" style="background:#eee; height: 700px">
 <h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
     <div class="new_villade_position">
