--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -87,3 +87,27 @@
 .border_position {
 	margin-bottom: 20px;
 }
+
+.signup_btn_position {
+	/*padding-top: -6px;*/
+	margin-top: 15px;
+	margin-left: 385px;
+	/*margin-right: 10px;*/
+	/*float: right;*/
+}
+
+.signup_field_width {
+	background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    color: #555;
+    display: block;
+    font-size: 14px;
+    height: 34px;
+    line-height: 1.42857;
+    padding: 6px 12px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+	width: 50%;
+}
