--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,45 +1,56 @@
 
 <!-- NAVBAR
-================================================== -->
+  ================================================== -->
   <!-- <body> -->
-    <div class="navbar-wrapper">
-      <div class="container">
+  <div class="navbar-wrapper">
+    <div class="container">
 
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="/">Namma Pandavapura</a>
-            </div>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="<%= about_us_path %>">About</a></li>
-                <li><a href="<%= contact_path %>">Contact</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
+      <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">ನಮ್ಮ ಪಾಂಡವಪುರ</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="<%= about_us_path %>">About</a></li>
+              <li><a href="<%= contact_path %>">Contact</a></li>
+              <li><a href="<%= events_path %>">Events</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+              <li>
+              <div id="user_nav" class="signup_btn_position">
+                  <% if current_user %>
+                  <%= link_to "Log out", log_out_path %>
+                  <% else %>
+                  <%= link_to "Sign up", new_user_path %> or
+                  <%= link_to "log in", new_session_path %>
+                  <% end %>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
-
       </div>
+
     </div>
+  </div>
 
 
     <!-- Carousel
@@ -150,32 +161,32 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">Governament Offices. <span class="text-muted">Go and get your document.</span></h2>
           <p class="lead">Most of the taluk Governament offices are there in Pandavapura city but some of are there in related hobali head quatres.
-          "mini vidanashowda" is the center of attraction in this city. </p>
+            "mini vidanashowda" is the center of attraction in this city. </p>
+          </div>
+          <div class="col-md-5">
+            <img class="featurette-image img-responsive" src="assets/office.jpg" alt="Generic placeholder image">
+          </div>
         </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="assets/office.jpg" alt="Generic placeholder image">
+
+        <hr class="featurette-divider">
+
+        <!-- /END THE FEATURETTES -->
+
+        <div class="row contact-margin">
+          <h2><u>Find Yourself In Pandavapura</u></h2></br>
+          <figure class="page6-img1 img-bot">
+            <iframe src="https://www.google.com/maps/embed/v1/place?q=11867+Padavapura,+Mandya,+Karnataka+571434,+India&key=AIzaSyCjd98SBT0PO8q7tP-lfYwzForr2YMFi9Y" width="1170" height="570" frameborder="0" style="border:1px solid"></iframe>
+          </figure>
         </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
-
-      <div class="row contact-margin">
-    <h2><u>Find Yourself In Pandavapura</u></h2></br>
-    <figure class="page6-img1 img-bot">
-                    <iframe src="https://www.google.com/maps/embed/v1/place?q=11867+Padavapura,+Mandya,+Karnataka+571434,+India&key=AIzaSyCjd98SBT0PO8q7tP-lfYwzForr2YMFi9Y" width="1170" height="570" frameborder="0" style="border:1px solid"></iframe>
-                </figure>
-</div>
 
 
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
+        <!-- FOOTER -->
+        <footer>
+          <p class="pull-right"><a href="#">Back to top</a></p>
+          <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        </footer>
 
-    </div><!-- /.container -->
+      </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
