--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,11 +1,13 @@
 <div class="container" style="background:#eee; height: 1000px">
 <h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
+    <% if current_user.has_role? :admin %>
 	<div class="creat_school_btn">
 		<a class="btn btn-primary" href="/schools/new" type="submit">
 			Create New School
 		</a>
 	</div>
+	<% end %>
 	<h2>List of Schools</h2>
 	<table class="table table-striped table-hover">
 		<thead>
@@ -13,7 +15,9 @@
 				<th class="entry-num">School Name</th>
 				<th class="date">Type</th>
 				<th class="name">Adress</th>
+				<% if current_user.has_role? :admin %>
 				<th class="action">Action</th>
+				<% end %>
 			</tr>
 		</thead>
 		<tbody class="table-body-background change-font">
@@ -22,11 +26,13 @@
 				<td><%= scl.name %></td>
 				<td><%= scl.type %></td>
 				<td><%= scl.address %></td>
+				<% if current_user.has_role? :admin %>
 				<td>
 					<%= link_to image_tag("icon-edit.png"), edit_school_path(scl.id), :title => "Edit", 'data-no-turbolink' => true %>
 					
 					<%= link_to image_tag("icon-deleted.png"), school_path(scl.id), method: :delete, data: {confirm: 'Are u sure'}, :title => "Delete"  %>
 				</td>
+				<% end %>
 			</tr>
 			<% end %>
 		</tbody>
