working on galary page

--- a/app/views/home/galary_page.html.erb
+++ b/app/views/home/galary_page.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar-wrapper">
-	<div class="container">
+	<div class="container" style="background:#eee; height: 1000px">
 	<h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
     <div class="new_villade_position">
@@ -8,7 +8,23 @@
     	</a>
     </div>
 		<h2>Images on Pandavapura</h2></br>
+		<div>
 		<img src="assets/images_1.jpg" alt="First slide">&nbsp;
-		<img src="assets/me.jpg" alt="First slide">
+		<img src="assets/me.jpg" alt="First slide">&nbsp;
+		<img src="assets/DSC00062.JPG" alt="First slide">&nbsp;
+		<img src="assets/DSC00063.JPG" alt="First slide"></br>
+		</div>
+		<div class="photo-padding-fix">
+		<img src="assets/DSC00064.JPG" alt="First slide">&nbsp;
+		<img src="assets/DSC00037.JPG" alt="First slide">&nbsp;
+		<img src="assets/DSC00056.JPG" alt="First slide">&nbsp;
+		<img src="assets/DSC00026.JPG" alt="First slide">
+		</div>
+		<div class="photo-padding-fix">
+		<img src="assets/DSC00107.JPG" alt="First slide">&nbsp;
+		<img src="assets/DSC00092.JPG" alt="First slide">&nbsp;
+		<img src="assets/DSC00066.JPG" alt="First slide">&nbsp;
+		<!-- <img src="assets/DSC00026.JPG" alt="First slide"> -->
+		</div>
 	</div>
 </div>
