--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -111,3 +111,15 @@
     transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
 	width: 50%;
 }
+
+.space_remove {
+    margin-bottom: 0px !important;
+}
+
+.paddind_fix_img {
+    padding-top: 20px !important;
+}
+
+.photo-padding-fix {
+    padding-top: 10px;
+}
