--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -3,9 +3,9 @@
   ================================================== -->
   <!-- <body> -->
   <div class="navbar-wrapper">
-    <div class="container">
+    <!-- <div class="container"> -->
 
-      <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="navbar navbar-inverse navbar-static-top space_remove" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -64,27 +64,27 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active" >
-          <img src="assets/slider12.jpg" class='center-aln' align="middle" alt="First slide">
+          <img src="assets/DSC00067.JPG" class='center-aln' align="middle" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Love.</h1>
-              <p></p>
-              <p><a class="btn btn-lg btn-primary" href="<%= map_path %>" role="button">Map</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="assets/slider12.jpg" align="middle" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Peace.</h1>
               <p></p>
               <p><a class="btn btn-lg btn-primary" href="<%= villages_path %>" role="button">List of Villages</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="assets/slider12.jpg" align="middle" alt="Third slide">
+          <img src="assets/04MELKOTE1.jpg" align="middle" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Peace.</h1>
+              <p></p>
+              <p><a class="btn btn-lg btn-primary" href="<%= map_path %>" role="button">Find in Padavapura</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/travel-kunti-betta2.jpg" align="middle" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Joy.</h1>
@@ -104,7 +104,7 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container marketing">
+    <div class="container marketing paddind_fix_img">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
@@ -186,7 +186,8 @@
           <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
         </footer>
 
-      </div><!-- /.container -->
+      <!-- </div> -->
+      <!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
