--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -4,13 +4,13 @@
     <%#= render :partial => "home_page/header" %>
     <h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
-    <% if current_user.has_role? :admin %>
+    <%# if current_user.has_role? :admin %>
 			<div class="new_villade_position">
 				<a class="btn btn-primary" href="/villages/new" type="submit">
 					Create New Village
 				</a>
 			</div>
-      <% end %>
+      <%# end %>
             <%= form_tag villages_path, :method => 'get' do %>
             <div class="search_field">
             <div class="row">
@@ -33,9 +33,9 @@
                <th class="coupon-width">List of Villages</th>
                <th class="coupon-width">Area in Hectares</th>
                <th class="coupon-width">Village Code</th>
-               <% if current_user.has_role? :admin %>
+               <%# if current_user.has_role? :admin %>
                <th class="Last-access">Action</th>
-               <% end %>
+               <%# end %>
            </tr>
        </thead>
        <tbody>
@@ -50,13 +50,13 @@
         <td>
             <div><%= vlg.village_code %></div>
         </td>
-        <% if current_user.has_role? :admin %>
+        <%# if current_user.has_role? :admin %>
         <td>
             <%= link_to image_tag("icon-edit.png"), edit_village_path(vlg.id), :title => "Edit", 'data-no-turbolink' => true %>
             <%= link_to image_tag("icon-deleted.png"), village_path(vlg.id), method: :delete, data: {confirm: 'Are u sure'}, :title => "Delete"  %>
         </a>
     </td>
-    <% end %>
+    <%# end %>
 </tr>
 <% end %>
 </tbody>
