changes on galary page

--- a/app/views/home/galary_page.html.erb
+++ b/app/views/home/galary_page.html.erb
@@ -24,7 +24,7 @@
 		<img src="assets/DSC00107.JPG" alt="First slide">&nbsp;
 		<img src="assets/DSC00092.JPG" alt="First slide">&nbsp;
 		<img src="assets/DSC00066.JPG" alt="First slide">&nbsp;
-		<!-- <img src="assets/DSC00026.JPG" alt="First slide"> -->
+		<img src="assets/index.jpeg" alt="First slide">
 		</div>
 	</div>
 </div>
