--- a/app/views/home/galary_page.html.erb
+++ b/app/views/home/galary_page.html.erb
@@ -11,7 +11,7 @@
 		<div>
 		<img src="assets/images_1.jpg" alt="First slide">&nbsp;
 		<img src="assets/me.jpg" alt="First slide">&nbsp;
-		<img src="assets/DSC00062.JPG" alt="First slide">&nbsp;
+		<img src="assets/kuntibetta.jpg" alt="First slide">&nbsp;
 		<img src="assets/DSC00063.JPG" alt="First slide"></br>
 		</div>
 		<div class="photo-padding-fix">
@@ -25,6 +25,12 @@
 		<img src="assets/DSC00092.JPG" alt="First slide">&nbsp;
 		<img src="assets/DSC00066.JPG" alt="First slide">&nbsp;
 		<img src="assets/index.jpeg" alt="First slide">
+		</div>
+		<div class="photo-padding-fix">
+		<img src="assets/pu1.jpeg" alt="First slide">&nbsp;
+		<img src="assets/pu2.jpeg" alt="First slide">&nbsp;
+		<img src="assets/pu3.jpeg" alt="First slide">&nbsp;
+		<img src="assets/DSC00062.JPG" alt="First slide">
 		</div>
 	</div>
 </div>
