--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -8,13 +8,13 @@
 		</a>
 	</div>
 	<%# end %>
-	<h2>List of Schools</h2>
+	<h2>List of Schools in City</h2>
 	<table class="table table-striped table-hover">
 		<thead>
 			<tr>
 				<th class="entry-num">School Name</th>
 				<th class="date">Type</th>
-				<th class="name">Adress</th>
+				<th class="name">Landmark</th>
 				<%# if current_user.has_role? :admin %>
 				<th class="action">Action</th>
 				<%# end %>
