--- a/app/views/tourist_places/index.html.erb
+++ b/app/views/tourist_places/index.html.erb
@@ -1,12 +1,17 @@
-<div class="container" style="background:#eee; height: 1500px">
+<div class="container" style="background:#eee; height: 2500px">
 <h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
     <%# if current_user.has_role? :admin %>
-	<div class="creat_school_btn">
+	<!-- <div class="creat_school_btn">
 		<a class="btn btn-primary" href="/tourist_places/new" type="submit">
-			Create New School
+			Create New Place
 		</a>
-	</div>
+	</div> -->
+	<div class="new_villade_position">
+    	<a class="btn btn-primary" href="/" type="cancel">
+    		Home
+    	</a>
+    </div>
 	<%# end %>
 	<h2><u>List of Place</u></h2>
 	<!-- <div class="header-border"></div> -->
@@ -24,12 +29,18 @@
 			<h4 class="text_color_place">*About Place:</h4>
 			<%= plc.description %>
 		</div>
+
+        <div>
+			<h4 class="text_color_place">*Place Image:</h4>
+            <%= image_tag plc.image_url(:thumb) %>
+        </div>
+
 		<%# if current_user.has_role? :admin %>
-		<div class="edit_btn_position">
-			<%= link_to "Edit", edit_tourist_place_path(plc.id), :class=> "btn btn-primary", 'data-no-turbolink' => true %>
+		<!-- <div class="edit_btn_position"> -->
+			<%#= link_to "Edit", edit_tourist_place_path(plc.id), :class=> "btn btn-primary", 'data-no-turbolink' => true %>
 			
-			<%= link_to "Delete", tourist_place_path(plc.id), :class=> "btn btn-primary", method: :delete, data: {confirm: 'Are u sure'} %>
-		</div>
+			<%#= link_to "Delete", tourist_place_path(plc.id), :class=> "btn btn-primary", method: :delete, data: {confirm: 'Are u sure'} %>
+		<!-- </div> -->
 		<%# end %>
 	</div>
 	<div class="row journal-entry-devider"> </div>
