--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -5,11 +5,16 @@
     <h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
     <%# if current_user.has_role? :admin %>
-			<div class="new_villade_position">
+			<!-- <div class="new_villade_position">
 				<a class="btn btn-primary" href="/villages/new" type="submit">
 					Create New Village
 				</a>
-			</div>
+			</div> -->
+      <div class="new_villade_position">
+      <a class="btn btn-primary" href="/" type="cancel">
+        Home
+      </a>
+    </div>
       <%# end %>
             <%= form_tag villages_path, :method => 'get' do %>
             <div class="search_field">
@@ -34,7 +39,7 @@
                <th class="coupon-width">Area in Hectares</th>
                <th class="coupon-width">Village Code</th>
                <%# if current_user.has_role? :admin %>
-               <th class="Last-access">Action</th>
+               <!-- <th class="Last-access">Action</th> -->
                <%# end %>
            </tr>
        </thead>
@@ -52,9 +57,9 @@
         </td>
         <%# if current_user.has_role? :admin %>
         <td>
-            <%= link_to image_tag("icon-edit.png"), edit_village_path(vlg.id), :title => "Edit", 'data-no-turbolink' => true %>
-            <%= link_to image_tag("icon-deleted.png"), village_path(vlg.id), method: :delete, data: {confirm: 'Are u sure'}, :title => "Delete"  %>
-        </a>
+            <%#= link_to image_tag("icon-edit.png"), edit_village_path(vlg.id), :title => "Edit", 'data-no-turbolink' => true %>
+            <%#= link_to image_tag("icon-deleted.png"), village_path(vlg.id), method: :delete, data: {confirm: 'Are u sure'}, :title => "Delete"  %>
+        <!-- </a> -->
     </td>
     <%# end %>
 </tr>
