--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -14,11 +14,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">ನಮ್ಮ ಪಾಂಡವಪುರ</a>
+            <!-- <a class="navbar-brand" href="/">ನಮ್ಮ ಪಾಂಡವಪುರ</a> -->
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/">Home</a></li>
+              <li class="active"><a href="/">ನಮ್ಮ ಪಾಂಡವಪುರ</a></li>
               <li><a href="<%= about_us_path %>">About</a></li>
               <li><a href="<%= contact_path %>">Contact</a></li>
               <li><a href="<%= villages_path %>">List of Villages</a></li>
@@ -139,9 +139,10 @@
         <div class="col-md-6">
           <h2 class="featurette-heading">Governament Bus Stand. <span class="text-muted">It'll blow your mind.</span></h2>
           <div class="lead">Bus service is provided by KSRTC runs buses that connect Pandavapura to other places in Karnataka and a few buses to other states. It was started service on 2007 inagurated by Kumaraswamy former chief minster Karnataka governament.</div>
+          <p><a class="btn btn-default" href="<%= offices_path %>" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-6">
-          <img class="featurette-image img-responsive" src="assets/bus.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="assets/IMG_20140929_170853929_HDR.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -149,11 +150,12 @@
 
       <div class="row featurette">
         <div class="col-md-6">
-          <img class="featurette-image img-responsive" src="assets/market.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="assets/rail.jpg" alt="Generic placeholder image">
         </div>
         <div class="col-md-6">
-          <h2 class="featurette-heading">Center Market. <span class="text-muted">You will get everything.</span></h2>
-          <p class="lead">It is there in the heart of the city and most of the shops are located in this place. Every Thursday, a farmer's market (called as "Santhe" in Kannada) is held in the heart of the town, here farmers directly sell their agricultural products</p>
+          <h2 class="featurette-heading">Railway Station. <span class="text-muted">Go where you want.</span></h2>
+          <p class="lead">Pandavapura Railway Station is Located in Karnataka, Mandya, Shrirangapattana. It belongs to South Western Railway, Bangalore Cy Jn. Neighbourhood Stations are Shrirangapatna,Chandagirikopal, Near By major Railway Station is Mysore Jn</p>
+          <p><a class="btn btn-default" href="<%= trains_path %>" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
@@ -164,9 +166,10 @@
           <h2 class="featurette-heading">Governament Offices. <span class="text-muted">Go and get your document.</span></h2>
           <p class="lead">Most of the taluk Governament offices are there in Pandavapura city but some of are there in related hobali head quatres.
             "mini vidanashowda" is the center of attraction in this city. </p>
+            <p><a class="btn btn-default" href="<%= offices_path %>" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-6">
-            <img class="featurette-image img-responsive" src="assets/office.jpg" alt="Generic placeholder image">
+            <img class="featurette-image img-responsive" src="assets/IMG_20140929_171708837_HDR.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
