--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -1,6 +1,6 @@
-<div class="navbar-wrapper">
-	<div class="container">
-    <div class="jumbotron">
+<!-- <div class="navbar-wrapper"> -->
+	<div class="container" style="background:#eee; height: 1000px">
+    <!-- <div class="jumbotron"> -->
     <%#= render :partial => "home_page/header" %>
     <h1>Namma Pandavapura</h1>
     <div class="header-border border_position"></div>
@@ -19,7 +19,7 @@
             <%= form_tag villages_path, :method => 'get' do %>
             <div class="search_field">
             <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <%= text_field_tag :search, params[:search], :class => " search_field_position" %>
                 </div>
                 <%#= submit_tag " Search", :name => nil, :class => 'search_btn_position'%>
@@ -72,8 +72,8 @@
 <a class="btn btn-primary" href="/" type="cancel">
     Back
 </a>
-<a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
-</a>
+<!-- <a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
+</a> -->
 </div>
-</div>
-</div>
+<!-- </div> -->
+<!-- </div> -->
